Removed Useless config on AppDeamon

--- a/appdaemon/appdaemon.yaml
+++ b/appdaemon/appdaemon.yaml
@@ -25,7 +25,7 @@ appdaemon:
       type: hass
       ha_url: http://hassio/homeassistant
       
-http:
-    url: http://192.168.1.102:5050
+#http:
+#    url: http://192.168.1.102:5050
 
 admin:
