--- a/components/template.yaml
+++ b/components/template.yaml
@@ -62,7 +62,7 @@ binary_sensor:
 
   - name: should_teuteu_run
     unique_id: should_teuteu_run
-    state: "{{ as_timestamp(utcnow() , 0) -  as_timestamp(states('input_datetime.dernier_nettoyage_de_teuteu') , 0 ) > 22 * 60 * 60 }}"
+    state: "{{ as_timestamp(utcnow() , 0) -  as_timestamp(states('input_datetime.dernier_nettoyage_de_teuteu') , 0 ) > 1 * 24 * 60 * 60 }}"
     device_class: problem
 
   - name: should_teuteu_run_urgently
