--- a/components/template.yaml
+++ b/components/template.yaml
@@ -34,7 +34,7 @@ binary_sensor:
 
   - name: is_tv_on
     unique_id: is_tv_on
-    state: "{{not (is_state('media_player.philips_android_tv', 'off') or is_state('media_player.philips_android_tv', 'unavailable') or is_state('media_player.philips_android_tv', 'unknown'))}}"
+    state: "{{not (is_state('media_player.philips_android_tv', 'off') or is_state('media_player.philips_android_tv', 'unavailable') or is_state('media_player.philips_android_tv', 'standby') or is_state('media_player.philips_android_tv', 'unknown'))}}"
 
   - name: is_ps5_used
     unique_id: is_ps5_used
