--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,244 +1,263 @@
 lights_set_livingroom_kitchen_regular:
   alias: lights_set_livingroom_kitchen_regular
   sequence:
-    - service: hue.activate_scene
-      data:
-        transition: 2
-      target:
-        entity_id:
-          - scene.salon_salon_100
-          - scene.entree_entree_100
-          - scene.cuisine_cuisine_100
+  - service: hue.activate_scene
+    data:
+      transition: 2
+    target:
+      entity_id:
+      - scene.salon_salon_100
+      - scene.entree_entree_100
+      - scene.cuisine_cuisine_100
   mode: restart
 lights_set_tv:
   alias: lights_set_tv
   sequence:
-    - data:
-        transition: 2
-      service: light.turn_off
-      target:
-        entity_id:
-          - light.cuisine
-          - light.entree
-    - service: hue.activate_scene
-      data:
-        transition: 2
-      target:
-        entity_id: scene.salon_salon_tv_playing
+  - data:
+      transition: 2
+    service: light.turn_off
+    target:
+      entity_id:
+      - light.cuisine
+      - light.entree
+  - service: hue.activate_scene
+    data:
+      transition: 2
+    target:
+      entity_id: scene.salon_salon_tv_playing
   mode: restart
 lights_set_tv_paused:
   alias: lights_set_tv_paused
   sequence:
-    - service: hue.activate_scene
-      data:
-        transition: 2
-      target:
-        entity_id:
-          - scene.cuisine_cuisine_tv_paused
-          - scene.entree_entree_tv_paused
-          - scene.salon_salon_tv_paused
+  - service: hue.activate_scene
+    data:
+      transition: 2
+    target:
+      entity_id:
+      - scene.cuisine_cuisine_tv_paused
+      - scene.entree_entree_tv_paused
+      - scene.salon_salon_tv_paused
   mode: restart
-"1619802584518":
+'1619802584518':
   alias: Quitter l'appartement
   sequence:
-    - service: light.turn_off
-      data:
-        transition: 2
-      target:
-        entity_id:
-          - light.all_lights
-    - service: media_player.turn_off
-      target:
-        entity_id: media_player.philips_android_tv
-      data: {}
-    - service: media_player.turn_off
-      target:
-        entity_id: media_player.kef
-      data: {}
-    - service: switch.turn_off
-      target:
-        entity_id:
-          - switch.coffeemaker
-      data: {}
+  - service: light.turn_off
+    data:
+      transition: 2
+    target:
+      entity_id:
+      - light.all_lights
+  - service: media_player.turn_off
+    target:
+      entity_id: media_player.philips_android_tv
+    data: {}
+  - service: media_player.turn_off
+    target:
+      entity_id: media_player.kef
+    data: {}
+  - service: switch.turn_off
+    target:
+      entity_id:
+      - switch.coffeemaker
+    data: {}
   mode: single
   icon: mdi:home-import-outline
 custom_toggle_teuteu:
   alias: Custom Toggle TeuTeu
   sequence:
-    - if:
-        - condition: state
-          entity_id: sensor.teuteu_simplified_state
-          state: docked
-          alias: IF docked
-      then:
-        - service: neato.custom_cleaning
-          data:
-            mode: 1
-            navigation: 2
-            category: 2
-          target:
-            entity_id: vacuum.teuteu
-          alias: clean
-      alias: IF docked then clean
-    - if:
-        - condition: state
-          entity_id: sensor.teuteu_simplified_state
-          state: cleaning
-          alias: IF cleaning
-      then:
-        - service: vacuum.return_to_base
-          data: {}
-          target:
-            entity_id: vacuum.teuteu
-          alias: RTH
-      alias: IF cleaning then RTH
+  - if:
+    - condition: state
+      entity_id: sensor.teuteu_simplified_state
+      state: docked
+      alias: IF docked
+    then:
+    - service: neato.custom_cleaning
+      data:
+        mode: 1
+        navigation: 2
+        category: 2
+      target:
+        entity_id: vacuum.teuteu
+      alias: clean
+    alias: IF docked then clean
+  - if:
+    - condition: state
+      entity_id: sensor.teuteu_simplified_state
+      state: cleaning
+      alias: IF cleaning
+    then:
+    - service: vacuum.return_to_base
+      data: {}
+      target:
+        entity_id: vacuum.teuteu
+      alias: RTH
+    alias: IF cleaning then RTH
   mode: single
   icon: mdi:robot-vacuum-variant
 custom_toggle_neuneu:
   alias: Custom Toggle NeuNeu
   sequence:
-    - if:
-        - condition: state
-          entity_id: sensor.neuneu_simplified_state
-          state: docked
-          alias: IF docked
-      then:
-        - service: vacuum.start
-          data: {}
-          target:
-            entity_id: vacuum.neuneu
-          alias: clean
-      alias: IF docked THEN clean
-    - if:
-        - condition: state
-          entity_id: sensor.neuneu_simplified_state
-          state: cleaning
-          alias: IF cleaning
-      then:
-        - service: vacuum.return_to_base
-          data: {}
-          target:
-            entity_id: vacuum.neuneu
-          alias: RTH
-      alias: IF cleaning THEN RTH
+  - if:
+    - condition: state
+      entity_id: sensor.neuneu_simplified_state
+      state: docked
+      alias: IF docked
+    then:
+    - service: vacuum.start
+      data: {}
+      target:
+        entity_id: vacuum.neuneu
+      alias: clean
+    alias: IF docked THEN clean
+  - if:
+    - condition: state
+      entity_id: sensor.neuneu_simplified_state
+      state: cleaning
+      alias: IF cleaning
+    then:
+    - service: vacuum.return_to_base
+      data: {}
+      target:
+        entity_id: vacuum.neuneu
+      alias: RTH
+    alias: IF cleaning THEN RTH
   mode: single
   icon: mdi:robot-vacuum
 turn_on_media_center:
   alias: Turn On Media center
   sequence:
-    - parallel:
-        - if:
-            - condition: state
-              entity_id: binary_sensor.is_tv_on
-              state: "off"
-              alias: IF TV OFF
-          then:
-            - if:
-                - condition: state
-                  entity_id: media_player.philips_android_tv
-                  state: unavailable
-                  alias: IF TV UNAVAILABLE
-              then:
-                - service: wake_on_lan.send_magic_packet
-                  data:
-                    mac: 68:07:0A:4A:F5:AB
-                  alias: WOL TV
-                - wait_for_trigger:
-                    - platform: state
-                      entity_id:
-                        - media_player.philips_android_tv
-                      not_to: unavailable
-                  alias: WAIT UNTIL TV IS AVAILABLE
-                  timeout:
-                    hours: 0
-                    minutes: 0
-                    seconds: 10
-                    milliseconds: 0
-                  continue_on_timeout: true
-              alias: IF TV UNAVAILABLE THEN WOL TV
-            - service: androidtv.adb_command
-              data:
-                command: "sendevent /dev/input/event1 1 116 1 && sendevent /dev/input/event1 0 0 0 && sendevent /dev/input/event1 1 116 0 && sendevent /dev/input/event1 0 0 0"
-              target:
-                entity_id: media_player.philips_android_tv
-              alias: TURN ON TV
-          alias: IF TV OFF THEN TURN ON TV
-        - if:
-            - condition: state
-              entity_id: media_player.kef
-              state: "off"
-              alias: IF LSK OFF
-          then:
-            - service: media_player.turn_on
-              data: {}
-              target:
-                entity_id: media_player.kef
-              alias: TURN ON LSX
-            - wait_for_trigger:
-                - platform: state
-                  entity_id:
-                    - media_player.kef
-                  not_to: "off"
-              timeout:
-                hours: 0
-                minutes: 0
-                seconds: 10
-                milliseconds: 0
-              continue_on_timeout: true
-              alias: WAIT FOR LSK TO TURN ON
-            - if:
-                - condition: not
-                  conditions:
-                    - condition: state
-                      entity_id: media_player.kef
-                      attribute: source
-                      state: Opt
-                      alias: LSK SOURCE OPT
-                  alias: IF LSK SOURCE NOT OPT
-              then:
-                - service: media_player.select_source
-                  data:
-                    source: Opt
-                  target:
-                    entity_id: media_player.kef
-                  alias: CHANGE LSK SOURCE TO OPT
-              alias: CHANGE LSK SOURCE
-          alias: IF LSK ARE OFF THEN TURN ON LSK
-      alias: TURN ON TV AND LSX IN PARALLEL
+  - parallel:
+    - if:
+      - condition: state
+        entity_id: binary_sensor.is_tv_on
+        state: 'off'
+        alias: IF TV OFF
+      then:
+      - if:
+        - condition: state
+          entity_id: media_player.philips_android_tv
+          state: unavailable
+          alias: IF TV UNAVAILABLE
+        then:
+        - service: wake_on_lan.send_magic_packet
+          data:
+            mac: 68:07:0A:4A:F5:AB
+          alias: WOL TV
+        - wait_for_trigger:
+          - platform: state
+            entity_id:
+            - media_player.philips_android_tv
+            not_to: unavailable
+          alias: WAIT UNTIL TV IS AVAILABLE
+          timeout:
+            hours: 0
+            minutes: 0
+            seconds: 10
+            milliseconds: 0
+          continue_on_timeout: true
+        alias: IF TV UNAVAILABLE THEN WOL TV
+      - service: media_player.turn_on
+        data: {}
+        target:
+          entity_id: media_player.philips_android_tv
+        alias: TURN TV ON
+      alias: IF TV OFF THEN TURN ON TV
+    - if:
+      - condition: state
+        entity_id: media_player.kef
+        state: 'off'
+        alias: IF LSK OFF
+      then:
+      - service: media_player.turn_on
+        data: {}
+        target:
+          entity_id: media_player.kef
+        alias: TURN ON LSX
+      - wait_for_trigger:
+        - platform: state
+          entity_id:
+          - media_player.kef
+          not_to: 'off'
+        timeout:
+          hours: 0
+          minutes: 0
+          seconds: 10
+          milliseconds: 0
+        continue_on_timeout: true
+        alias: WAIT FOR LSK TO TURN ON
+      - if:
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: media_player.kef
+            attribute: source
+            state: Opt
+            alias: LSK SOURCE OPT
+          alias: IF LSK SOURCE NOT OPT
+        then:
+        - service: media_player.select_source
+          data:
+            source: Opt
+          target:
+            entity_id: media_player.kef
+          alias: CHANGE LSK SOURCE TO OPT
+        alias: CHANGE LSK SOURCE
+      alias: IF LSX ARE OFF THEN TURN ON LSX
+    - if:
+      - condition: state
+        entity_id: media_player.kef
+        state: 'on'
+        alias: IF LSK ON
+      - condition: not
+        conditions:
+        - condition: state
+          entity_id: media_player.kef
+          attribute: source
+          state: Opt
+          alias: LSK SOURCE OPT
+        alias: IF LSK SOURCE NOT OPT
+      then:
+      - service: media_player.select_source
+        data:
+          source: Opt
+        target:
+          entity_id: media_player.kef
+        alias: CHANGE LSK SOURCE TO OPT
+      alias: IF LSX ARE ON THEN CHANGE LSX SOURCE
+    alias: TURN ON TV AND LSX IN PARALLEL
   mode: single
   icon: mdi:television
 turn_off_media_center:
   alias: Turn Off Media center
   sequence:
-    - parallel:
-        - if:
-            - condition: state
-              entity_id: binary_sensor.is_tv_on
-              state: "on"
-              alias: IF TV ON
-          then:
-            - service: androidtv.adb_command
-              data:
-                command: "sendevent /dev/input/event1 1 116 1 && sendevent /dev/input/event1 0 0 0 && sendevent /dev/input/event1 1 116 0 && sendevent /dev/input/event1 0 0 0"
-              target:
-                entity_id: media_player.philips_android_tv
-              alias: TURN OFF TV
-          alias: IF TV ON THEN TURN OFF TV
-        - if:
-            - condition: not
-              conditions:
-                - condition: state
-                  entity_id: media_player.kef
-                  state: "off"
-                  alias: IF LSK OFF
-              alias: IF KEF NOT OFF
-          then:
-            - service: media_player.turn_off
-              data: {}
-              target:
-                entity_id: media_player.kef
-              alias: TURN OFF KEF
-          alias: IF LSK ON THEN TURN OFF LSX
-      alias: TURN OFF TV AND LSX IN PARALLEL
+  - parallel:
+    - if:
+      - condition: state
+        entity_id: binary_sensor.is_tv_on
+        state: 'on'
+        alias: IF TV ON
+      then:
+      - service: media_player.turn_off
+        data: {}
+        target:
+          entity_id: media_player.philips_android_tv
+        alias: TURN TV OFF
+      alias: IF TV ON THEN TURN OFF TV
+    - if:
+      - condition: not
+        conditions:
+        - condition: state
+          entity_id: media_player.kef
+          state: 'off'
+          alias: IF LSK OFF
+        alias: IF KEF NOT OFF
+      then:
+      - service: media_player.turn_off
+        data: {}
+        target:
+          entity_id: media_player.kef
+        alias: TURN OFF KEF
+      alias: IF LSK ON THEN TURN OFF LSX
+    alias: TURN OFF TV AND LSX IN PARALLEL
   mode: single
   icon: mdi:television
