--- a/components/proximity.yaml
+++ b/components/proximity.yaml
@@ -3,11 +3,11 @@ distance_jl_home:
   devices:
     - person.jenova70
   tolerance: 50
-  unit_of_measurement: km
+  unit_of_measurement: m
 
 distance_valentine_home:
   zone: home
   devices:
     - person.valentine
   tolerance: 50
-  unit_of_measurement: km
+  unit_of_measurement: m
