--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,6 +17,7 @@ wake_on_lan:
 # MISC
 http: !include misc/http.yaml
 recorder: !include misc/recorder.yaml
+influxdb: !include misc/influxdb.yaml
 
 # AUTOMATIONS
 automation: !include automations.yaml
