--- a/components/sensor.yaml
+++ b/components/sensor.yaml
@@ -3,11 +3,12 @@
   resources:
     - type: disk_use_percent
       arg: /
-    - type: disk_use
-      arg: /
-    - type: disk_free
-      arg: /
     - type: memory_use_percent
-    - type: memory_use
-    - type: memory_free
     - type: processor_temperature
+    - type: processor_use
+    - type: throughput_network_in
+      arg: eth0
+    - type: throughput_network_out
+      arg: eth0
+    
+    
