New simple app to track when to take out trash

--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -94,9 +94,9 @@ smart_cube:
   module: smart_cube
   class: smart_cube
 
-track_car:
-  module: track_car
-  class: track_car
+take_out_trash:
+  module: take_out_trash
+  class: take_out_trash
 
   #sandbox:
 #  module: sandbox
