--- a/components/template.yaml
+++ b/components/template.yaml
@@ -103,124 +103,52 @@
 
     - name: clio
       unique_id: clio
-      state: "{{this.attributes.connection in ['jl','valentine'] | default(false) }}"
+      state: "{{ this.attributes.connexion in ['jl', 'valentine'] | default(false)}}"
       attributes:
-        connection: >
-          {% set jl_connected_to_clio = namespace(value = false) -%}
+        connexion: >
+          {% set jl_connected = namespace(value = false) -%}
+          {% set valentine_connected = namespace(value = false) -%}
+          {% set bt_mac_address = '04:4E:AF:AD:CA:B4' -%}
           {% for device in state_attr('sensor.pixel_6_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if '04:4E:AF:AD:CA:B4' in device -%}
-              {% set jl_connected_to_clio.value = true -%}
+            {% if bt_mac_address in device -%}
+              {% set jl_connected.value = true -%}
             {% endif -%}
           {% endfor -%}
-          {% set valentine_connected_to_clio = namespace(value = false) -%}
           {% for device in state_attr('sensor.pixel_4a_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if '04:4E:AF:AD:CA:B4' in device -%}
-              {% set valentine_connected_to_clio.value = true -%}
+            {% if bt_mac_address in device -%}
+              {% set valentine_connected.value = true -%}
             {% endif -%}
           {% endfor -%}
-          {% if jl_connected_to_clio.value -%}
-          jl
-          {% elif valentine_connected_to_clio.value -%}
-          valentine
+          {% if jl_connected.value -%}
+            jl
+          {% elif valentine_connected.value -%}
+            valentine
           {% else -%}
-          -
+            -
           {% endif %}
         latitude: >
-          {% if this.attributes.connection == 'jl' -%}
-          {{state_attr('person.jenova70', 'latitude')}}
-          {% elif this.attributes.connection == 'valentine' -%}
-          {{state_attr('person.valentine', 'latitude')}}
+          {% if this.attributes.connexion == 'jl' -%}
+            {{state_attr('person.jenova70', 'latitude')}}
+          {% elif this.attributes.connexion == 'valentine' -%}
+            {{state_attr('person.valentine', 'latitude')}}
           {% else -%}
-          {{ this.attributes.latitude | default(state_attr('zone.home', 'latitude'))}}
+            {{ this.attributes.latitude | default(state_attr('zone.home', 'latitude')) }}
           {% endif -%}
         longitude: >
-          {% if this.attributes.connection == 'jl' -%}
-          {{state_attr('person.jenova70', 'longitude')}}
-          {% elif this.attributes.connection == 'valentine' -%}
-          {{state_attr('person.valentine', 'longitude')}}
+          {% if this.attributes.connexion == 'jl' -%}
+            {{state_attr('person.jenova70', 'longitude')}}
+          {% elif this.attributes.connexion == 'valentine' -%}
+            {{state_attr('person.valentine', 'longitude')}}
           {% else -%}
-          {{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}
+            {{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}
           {% endif -%}
-        entity_picture: "/local/clio.jpg"
-        direction_url: "https://www.google.com/maps/dir/?api=1&destination={{ this.attributes.latitude | default(state_attr('zone.home', 'latitude'))}}%2C{{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}"
-
-    - name: clio_used_by_jl
-      unique_id: clio_used_by_jl
-      state: >
-        {% set jl_connected_to_clio = namespace(value = false) -%}
-        {% for device in state_attr('sensor.pixel_6_bluetooth_connection' , 'connected_paired_devices') -%}
-          {% if '04:4E:AF:AD:CA:B4' in device -%}
-            {% set jl_connected_to_clio.value = true -%}
-          {% endif -%}
-        {% endfor -%}
-        {{ jl_connected_to_clio.value }}
-      delay_off: "0:00:30"
-      attributes:
-        will_soon_turn_off: >
-          {% if this.state == "off" %}
-          {{false}}
-          {% else %}
-          {% set jl_connected_to_clio = namespace(value = false) -%}
-          {% for device in state_attr('sensor.pixel_6_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if '04:4E:AF:AD:CA:B4' in device -%}
-              {% set jl_connected_to_clio.value = true -%}
-            {% endif -%}
-          {% endfor -%}
-          {{ not jl_connected_to_clio.value }}
-          {% endif -%}
-
-    - name: clio_used_by_valentine
-      unique_id: clio_used_by_valentine
-      state: >
-        {% set valentine_connected_to_clio = namespace(value = false) -%}
-        {% for device in state_attr('sensor.pixel_4a_bluetooth_connection' , 'connected_paired_devices') -%}
-          {% if '04:4E:AF:AD:CA:B4' in device -%}
-            {% set valentine_connected_to_clio.value = true -%}
-          {% endif -%}
-        {% endfor -%}
-        {{ valentine_connected_to_clio.value }}
-      delay_off: "0:00:30"
-      attributes:
-        will_soon_turn_off: >
-          {% if this.state == "off" %}
-          {{false}}
-          {% else %}
-          {% set valentine_connected_to_clio = namespace(value = false) -%}
-          {% for device in state_attr('sensor.pixel_4a_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if '04:4E:AF:AD:CA:B4' in device -%}
-              {% set valentine_connected_to_clio.value = true -%}
-            {% endif -%}
-          {% endfor -%}
-          {{ not valentine_connected_to_clio.value }}
-          {% endif -%}
-
-    - name: clio_v2
-      unique_id: clio_v2
-      state: "{{this.attributes.connection in ['jl','valentine'] | default(false) }}"
-      attributes:
-        connection: >
-          {% if states("binary_sensor.clio_used_by_jl") == "on" -%}
-          jl
-          {% elif states("binary_sensor.clio_used_by_valentine") == "on" -%}
-          valentine
+        gps_accuracy: >
+          {% if this.attributes.connexion == 'jl' -%}
+            {{state_attr('person.jenova70', 'gps_accuracy')}}
+          {% elif this.attributes.connexion == 'valentine' -%}
+            {{state_attr('person.valentine', 'gps_accuracy')}}
           {% else -%}
-          -
-          {% endif %}
-        latitude: >
-          {% if this.attributes.connection == 'jl' -%}
-          {{state_attr('person.jenova70', 'latitude')}}
-          {% elif this.attributes.connection == 'valentine' -%}
-          {{state_attr('person.valentine', 'latitude')}}
-          {% else -%}
-          {{ this.attributes.latitude | default(state_attr('zone.home', 'latitude'))}}
-          {% endif -%}
-        longitude: >
-          {% if this.attributes.connection == 'jl' -%}
-          {{state_attr('person.jenova70', 'longitude')}}
-          {% elif this.attributes.connection == 'valentine' -%}
-          {{state_attr('person.valentine', 'longitude')}}
-          {% else -%}
-          {{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}
+            {{ this.attributes.gps_accuracy | default(0) }}
           {% endif -%}
         entity_picture: "/local/clio.jpg"
         direction_url: "https://www.google.com/maps/dir/?api=1&destination={{ this.attributes.latitude | default(state_attr('zone.home', 'latitude'))}}%2C{{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}"
