--- a/components/template.yaml
+++ b/components/template.yaml
@@ -103,52 +103,46 @@
 
     - name: clio
       unique_id: clio
-      state: "{{ this.attributes.connexion in ['jl', 'valentine'] | default(false)}}"
+      state: "{{ this.attributes.driver_id != '-' | default(false)}}"
       attributes:
-        connexion: >
-          {% set jl_connected = namespace(value = false) -%}
-          {% set valentine_connected = namespace(value = false) -%}
-          {% set bt_mac_address = '04:4E:AF:AD:CA:B4' -%}
-          {% for device in state_attr('sensor.pixel_6_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if bt_mac_address in device -%}
-              {% set jl_connected.value = true -%}
-            {% endif -%}
-          {% endfor -%}
-          {% for device in state_attr('sensor.pixel_4a_bluetooth_connection' , 'connected_paired_devices') -%}
-            {% if bt_mac_address in device -%}
-              {% set valentine_connected.value = true -%}
-            {% endif -%}
-          {% endfor -%}
-          {% if jl_connected.value -%}
-            jl
-          {% elif valentine_connected.value -%}
-            valentine
-          {% else -%}
+        bluetooth_mac_adress: "00:00:00:00:00:00"
+        driver_id: >
+          {%- set value = "-" -%}
+          {%- for person in states.person -%}
+            {%- if state_attr("person."+person.attributes.id, "source") != None -%}
+              {%- if state_attr(state_attr("person."+person.attributes.id, "source") | replace("device_tracker", 'sensor') + "_bluetooth_connection", "connected_paired_devices") != None -%}
+                {%- for device in state_attr(state_attr("person."+person.attributes.id, "source") | replace("device_tracker", 'sensor') + "_bluetooth_connection", "connected_paired_devices") -%}
+                  {%- if this.attributes.bluetooth_mac_adress in device -%}
+                    {%- set value = state_attr("person."+person.attributes.id, "id") -%}
+                  {%- endif -%}
+                {%- endfor -%}
+              {%- endif -%}
+            {%- endif -%}
+          {%- endfor -%}
+          {{- value -}}
+        driver_name: >
+          {%- if this.attributes.driver_id != '-' -%}
+            {{ state_attr("person."+this.attributes.driver_id, "friendly_name") }}
+          {%- else -%}
             -
-          {% endif %}
+          {%- endif -%}
         latitude: >
-          {% if this.attributes.connexion == 'jl' -%}
-            {{state_attr('person.jenova70', 'latitude')}}
-          {% elif this.attributes.connexion == 'valentine' -%}
-            {{state_attr('person.valentine', 'latitude')}}
+          {%- if this.attributes.driver_id != '-' -%}
+            {{ state_attr("person."+this.attributes.driver_id, "latitude") }}
           {% else -%}
             {{ this.attributes.latitude | default(state_attr('zone.home', 'latitude')) }}
           {% endif -%}
         longitude: >
-          {% if this.attributes.connexion == 'jl' -%}
-            {{state_attr('person.jenova70', 'longitude')}}
-          {% elif this.attributes.connexion == 'valentine' -%}
-            {{state_attr('person.valentine', 'longitude')}}
+          {%- if this.attributes.driver_id != '-' -%}
+            {{ state_attr("person."+this.attributes.driver_id, "longitude") }}
           {% else -%}
             {{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}
           {% endif -%}
         gps_accuracy: >
-          {% if this.attributes.connexion == 'jl' -%}
-            {{state_attr('person.jenova70', 'gps_accuracy')}}
-          {% elif this.attributes.connexion == 'valentine' -%}
-            {{state_attr('person.valentine', 'gps_accuracy')}}
+          {%- if this.attributes.driver_id != '-' -%}
+            {{ state_attr("person."+this.attributes.driver_id, "gps_accuracy") }}
           {% else -%}
             {{ this.attributes.gps_accuracy | default(0) }}
-          {% endif -%}
+          {% endif -%}        
         entity_picture: "/local/clio.jpg"
         direction_url: "https://www.google.com/maps/dir/?api=1&destination={{ this.attributes.latitude | default(state_attr('zone.home', 'latitude'))}}%2C{{ this.attributes.longitude | default(state_attr('zone.home', 'longitude')) }}"
