Filter a few attributes of my Xiaomi vacuum

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,6 +12,7 @@ template: !include components/template.yaml
 camera: !include components/camera.yaml
 media_player: !include components/media_player.yaml
 switch: !include components/switch.yaml
+xiaomi_miot: !include components/xiaomi_miot.yaml
 wake_on_lan:
 
 # MISC
